2010-11-16  Tomas Mraz  <tm@t8m.info>

	* modules/pam_pwhistory/pam_pwhistory.c (pam_sm_chauthtok): Remove
	dead and duplicate code. Return PAM_INCOMPLETE instead of
	PAM_CONV_AGAIN.

2010-11-11  Tomas Mraz  <tm@t8m.info>

	* modules/pam_selinux/pam_selinux.c (pam_sm_open_session): Fix
	potential use after free in case SELinux is misconfigured.

	* modules/pam_namespace/pam_namespace.c (process_line): Fix memory
	leak when parsing empty config file lines.

2010-10-28  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 1.1.3

	* configure.in: Increase version to 1.1.3

	* NEWS: document visible changes

	* libpam/Makefile.am (libpam_la_LDFLAGS): Bump version number.

2010-10-27  Thorsten Kukuk <kukuk@thkukuk.de>

	* doc/adg/Makefile.am: Use UTF-8 for html docu.
	* doc/mwg/Makefile.am: Likewise.
	* doc/sag/Makefile.am: Likewise.

2010-10-22  Tomas Mraz  <tm@t8m.info>

	* modules/pam_namespace/pam_namespace.c (inst_init): Use execle()
	to execute the init script with clean environment. (CVE-2010-3853)
	(cleanup_tmpdirs): Likewise for executing rm.

2010-10-21  Dmitry V. Levin  <ldv@altlinux.org>

	* modules/pam_mkhomedir/mkhomedir_helper.c (rec_mkdir): Remove.
	(create_homedir): Use mkdir() instead of rec_mkdir().
	(make_parent_dirs): New function.
	(main): Use make_parent_dirs() to create parent directories only
	for the home directory itself.

2010-10-21  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/support.c (_unix_getpwnam): Don't allocate
	unneeded buffer for uid/gid [sf#3059572].

2010-10-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam_get_authtok.3.xml: Fix xml code.

	* doc/man/Makefile.am: Fix build dependencys of pam_get_authtok.3.

	* xtests/Makefile.am: Only build xtests if we run xtests.
	* configure.in: Check for libdb with symbol versions, too.
	Patch from Diego Elio Pettenò.

	* modules/pam_mkhomedir/mkhomedir_helper.c (rec_mkdir): Create
	parent directories always with mode 0755.