@@ -1,3 +1,9 @@
+2010-11-18  Tomas Mraz  <tm@t8m.info>
+
+	* modules/pam_limits/pam_limits.c (pam_parse,pam_sm_open_session):
+	Drop obsolete and broken option change_uid.
+	* modules/pam_limits/pam_limits.8.xml: Likewise.
+
 2010-11-16  Tomas Mraz  <tm@t8m.info>
 
 	* modules/pam_pwhistory/pam_pwhistory.c (pam_sm_chauthtok): Remove
